--- a/style.css
+++ b/style.css
@@ -57,8 +57,9 @@ body {
 
 .tile::before {
     content: "";
-    background-color: rgb(20, 20, 20);
-
+    background-color: rgb(0, 0, 0);
+    border-radius: 5px;
+    margin: 0;
     position: absolute;
     inset: .5px;
 }
